# downloader-4anime

./: .editorconfig  .gitignore  NON_CODERS.md  README.md  nodemon.json  setup.cfg  setup.py
src/: __init__.py  anime.py  cacher.py  events.py  handling.py  stream.py  util.py
src/downloader_4anime/: __init__.py  anime.py  cacher.py  events.py  handling.py  scanner.py  stream.py  util.py
tests/: anime_test.py  cacher_test.py  events_test.py  scanner_test.py  stream.py  stream_test.py  util.py
