[metadata]
name = 4anime-downloader
version = 0.0.1
author = Fabricio Pashaj
author_email = fabriciopashaj.dev@gmail.com
description = A python library for downloading anime from the 4anime.to website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriciopashaj/downloader-4anime
project_urls =
	Bug Tracker = https://github.com/fabriciopashaj/downloader-4anime/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
[options]
package_dir = 
	= src
packages = click
python_requires = >=3.7
