[metadata]
name = downloader_4anime
version = attr: downloader_4anime.__version__
author = attr: downloader_4anime.__author__
author_email = attr: downloader_4anime.__email__
description = A python library for downloading anime from the 4anime.to website
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabriciopashaj/downloader-4anime
project_urls =
	Documentation = https://github.com/fabriciopashaj/downloader-4anime#readme
	Source Code = https://github.com/fabriciopashaj/downloader-4anime
	Bug Tracker = https://github.com/fabriciopashaj/downloader-4anime/issues
license = MIT
license_files = LICENSE
classifiers =
	Development Status :: 3 - Development/Stable
	Target Audience :: Anime Watchers/Weebs
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
[options]
packages = find:
package_dir = 
	= src
setup_requires =
	setuptools >=46.4.0
install_requires =
	click >=7.1.0
python_requires = >=3.7
[options.packages.find]
where = src
